--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,9 @@ dependencies:
   
   # Network
   http: ^1.1.0
+  sqflite: ^2.2.8
+  path: ^1.8.4
+  path_provider: ^2.0.15
   
   # Local storage
   shared_preferences: ^2.2.2
@@ -39,5 +42,5 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
-  # assets:
-  #   - assets/images/
+  assets:
+    - assets/images/
