--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
   # Mapas y geolocalización
   geolocator: ^10.1.0
   geocoding: ^2.1.1
+  flutter_map: ^6.0.0
+  latlong2: ^0.9.0
   
   # Utils
   intl: ^0.19.0
