--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,39 +1,39 @@
 name: supermarket_delivery_app
 description: "Una aplicación Flutter para delivery de múltiples supermercados"
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.0 <4.0.0'
+  sdk: ">=3.1.0 <4.0.0"
   flutter: ">=3.13.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  
+
   # Estado y navegación
   flutter_riverpod: ^2.4.9
   go_router: ^12.1.1
-  
+
   # UI y componentes
   cached_network_image: ^3.3.0
-  
+
   # Network
   http: ^1.1.0
   sqflite: ^2.2.8
   path: ^1.8.4
   path_provider: ^2.0.15
-  
+
   # Local storage
   shared_preferences: ^2.2.2
-  
+
   # Mapas y geolocalización
   geolocator: ^10.1.0
   geocoding: ^2.1.1
   flutter_map: ^6.0.0
   latlong2: ^0.9.0
-  
+
   # Utils
   intl: ^0.19.0
 
